--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html
+    lang="en"
+    xmlns:th="https://www.thymeleaf.org"
+    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,8 +41,27 @@
         />-->
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center">
-        <div class="container">
+    <body
+        class="min-vh-100 d-flex flex-column align-items-center justify-content-between"
+    >
+        <div sec:authorize="!isAuthenticated()" class="container-fluid bg-dark">
+            <div class="row">
+                <div class="col-12 mx-auto text-white text-center">
+                    ЗАГОЛОВОК
+                </div>
+                <div class="col-12 mx-auto text-white text-center">
+                    ЗАГОЛОВОК
+                </div>
+                <div class="col-12 mx-auto text-white text-center">
+                    ЗАГОЛОВОК
+                </div>
+            </div>
+        </div>
+        <div
+            sec:authorize="isAuthenticated()"
+            th:replace="@{${header1}} :: ${header}"
+        ></div>
+        <div class="container-fluid mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
                 <p>
                     Войдите в аккаунт или зарегистрируйтесь. Если ваше
@@ -60,7 +83,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="row text-white bg-dark rounded py-2">
+            <div
+                sec:authorize="!isAuthenticated()"
+                class="row text-white bg-dark text-center rounded py-2"
+            >
                 <div>
                     <a
                         href="#"
@@ -77,6 +103,13 @@
                         >Зарегистрироваться</a
                     >
                 </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-dark">
+            <div class="row">
+                <div class="col-12 mx-auto text-white text-center">ФУТЕР</div>
+                <div class="col-12 mx-auto text-white text-center">ФУТЕР</div>
+                <div class="col-12 mx-auto text-white text-center">ФУТЕР</div>
             </div>
         </div>
     </body>
