--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -141,7 +141,7 @@
                         </div>
                         <div>
                             <button type="submit" class="btn btn-primary">
-                                Войти
+                                Зарегистрироваться
                             </button>
                         </div>
                     </form>
