--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -26,15 +26,17 @@
             <!-- Навигационная панель -->
             <nav class="m-2">
                 <ul class="nav justify-content-center">
-                    <li class="text-white">
+                    <li>
                         <a
                             href="#"
-                            th:href="@{/users/id}"
+                            th:href="@{/profile/__${currentUser.id}__}"
                             class="nav-link text-wheat"
+                            th:text="${nameLastname}"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
-                            >АДМИНИСТРАТОР</a
+                            >ИмяФамилия</a
                         >
                     </li>
+                    <li class="text-white">АДМИНИСТРАТОР</li>
                     <li>
                         <a
                             href="#"
