--- a/src/main/resources/templates/main-admin-code-gen.html
+++ b/src/main/resources/templates/main-admin-code-gen.html
@@ -59,7 +59,8 @@
         </div>
         <div
             sec:authorize="isAuthenticated()"
-            th:replace="@{${header1}} :: ${header}"
+            th:insert="@{${header1}} :: ${header}"
+            class="container"
         ></div>
         <div class="container">
             <div class="row text-center mb-5">
