--- a/src/main/resources/templates/patient-profile.html
+++ b/src/main/resources/templates/patient-profile.html
@@ -64,17 +64,19 @@
         ></div>
         <div class="container mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
-                <p th:text="">
-                </p>
+                <h1 th:text="${patient.role.alias}"></h1>
                 <div>
                     <ul>
+                        <li th:text="${patient.hospitalId}"></li>
+                        <li th:text="${patient.userInformation.lastname}"></li>
+                        <li th:text="${patient.userInformation.name}"></li>
                         <li
-                            th:each="each : ${formattedContacts}"
-                            th:text="${each}"
+                            th:text="${patient.userInformation.patronymic}"
                         ></li>
                     </ul>
                 </div>
             </div>
+        </div>
         <div class="container-fluid bg-dark">
             <div class="row">
                 <div class="col-12 mx-auto text-white text-center">ФУТЕР</div>
