--- a/src/main/resources/templates/admin-profile.html
+++ b/src/main/resources/templates/admin-profile.html
@@ -64,17 +64,26 @@
         ></div>
         <div class="container mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
-                <p th:text="">
-                </p>
+                <h1 th:text="${admin.role.alias}"></h1>
                 <div>
                     <ul>
+                        <li th:text="${admin.hospitalId}"></li>
                         <li
-                            th:each="each : ${formattedContacts}"
-                            th:text="${each}"
+                            th:text="${admin.employeeInformation.userInformation.lastname}"
+                        ></li>
+                        <li
+                            th:text="${admin.employeeInformation.userInformation.name}"
+                        ></li>
+                        <li
+                            th:text="${admin.employeeInformation.userInformation.patronymic}"
+                        ></li>
+                        <li
+                            th:text="${admin.employeeInformation.experience}"
                         ></li>
                     </ul>
                 </div>
             </div>
+        </div>
         <div class="container-fluid bg-dark">
             <div class="row">
                 <div class="col-12 mx-auto text-white text-center">ФУТЕР</div>
