--- a/src/main/resources/templates/all-admins.html
+++ b/src/main/resources/templates/all-admins.html
@@ -69,7 +69,7 @@
                         <li th:each="each : ${allAdmins}">
                             <a
                                 href="#"
-                                th:href="@{/profile/__${each.id}__}"
+                                th:href="@{/profile/admin/__${each.id}__}"
                                 th:text="${each.employeeInformation.userInformation.name} + ' ' + ${each.employeeInformation.userInformation.lastname} + ' oid: ' + ${each.hospitalId}"
                             ></a>
                         </li>
