--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -64,13 +64,16 @@
         ></div>
         <div class="container mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
-                <h1 class="mb-5">Администраторы от всех больниц</h1>
+                <h1
+                    th:text="'Врачи вашей больницы с oid = ' + ${currentUser.hospitalId}"
+                    class="mb-5"
+                ></h1>
                 <div>
                     <ul>
-                        <li th:each="each : ${allAdmins}">
+                        <li th:each="each : ${doctors}">
                             <a
                                 href="#"
-                                th:href="@{/profile/admin/__${each.id}__}"
+                                th:href="@{/profile/doctor/__${each.id}__}"
                                 th:text="${each.employeeInformation.userInformation.name} + ' ' + ${each.employeeInformation.userInformation.lastname} + ' oid: ' + ${each.hospitalId}"
                             ></a>
                         </li>
