--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -64,14 +64,17 @@
         ></div>
         <div class="container mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
-                <h1 class="mb-5">Администраторы от всех больниц</h1>
+                <h1
+                    th:text="'Пациенты вашей больницы с oid = ' + ${currentUser.hospitalId}"
+                    class="mb-5"
+                ></h1>
                 <div>
                     <ul>
-                        <li th:each="each : ${allAdmins}">
+                        <li th:each="each : ${patients}">
                             <a
                                 href="#"
-                                th:href="@{/profile/admin/__${each.id}__}"
-                                th:text="${each.employeeInformation.userInformation.name} + ' ' + ${each.employeeInformation.userInformation.lastname} + ' oid: ' + ${each.hospitalId}"
+                                th:href="@{/profile/patient/__${each.id}__}"
+                                th:text="${each.userInformation.name} + ' ' + ${each.employeeInformation.lastname} + ' oid: ' + ${each.hospitalId}"
                             ></a>
                         </li>
                     </ul>
