Поправил структуру БД - теперь у пациента карточка не явная, а условная, складывающаяся из его ID в таблице examination_table. Поменял PatientCard на PatientExamination. Исправил неверную ссылку на ID доктора в сущности PatientRecovery. Эти изменения не только для черновика, но и на будущее.

--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -74,7 +74,7 @@
                             <a
                                 href="#"
                                 th:href="@{/profile/patient/__${each.id}__}"
-                                th:text="${each.userInformation.name} + ' ' + ${each.employeeInformation.lastname} + ' oid: ' + ${each.hospitalId}"
+                                th:text="${each.userInformation.name} + ' ' + ${each.userInformation.lastname} + ' oid: ' + ${each.hospitalId}"
                             ></a>
                         </li>
                     </ul>
