--- a/src/main/resources/templates/fragments/doctor-header.html
+++ b/src/main/resources/templates/fragments/doctor-header.html
@@ -29,7 +29,7 @@
                     <li>
                         <a
                             href="#"
-                            th:href="@{/profile/__${currentUser.id}__}"
+                            th:href="@{/profile/doctor/__${currentUser.id}__}"
                             class="nav-link text-wheat"
                             th:text="${nameLastname}"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
@@ -40,19 +40,28 @@
                     <li>
                         <a
                             href="#"
-                            th:href="@{/}"
+                            th:href="@{/own-patients}"
                             class="nav-link text-wheat"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
-                            >Главная</a
+                            >Свои пациенты</a
                         >
                     </li>
                     <li>
                         <a
                             href="#"
-                            th:href="@{/}"
+                            th:href="@{/doctors}"
                             class="nav-link text-wheat"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
-                            >Пациенты</a
+                            >Врачи</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#"
+                            th:href="@{/admins}"
+                            class="nav-link text-wheat"
+                            th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
+                            >Администраторы</a
                         >
                     </li>
                     <li>
