--- a/src/main/resources/templates/fragments/patient-header.html
+++ b/src/main/resources/templates/fragments/patient-header.html
@@ -29,7 +29,7 @@
                     <li>
                         <a
                             href="#"
-                            th:href="@{/profile/__${currentUser.id}__}"
+                            th:href="@{/profile/patient/__${currentUser.id}__}"
                             class="nav-link text-wheat"
                             th:text="${nameLastname}"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
@@ -40,25 +40,7 @@
                     <li>
                         <a
                             href="#"
-                            th:href="@{/}"
-                            class="nav-link text-wheat"
-                            th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
-                            >Главная</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="#"
-                            th:href="@{/}"
-                            class="nav-link text-wheat"
-                            th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
-                            >Лечащий врач</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="#"
-                            th:href="@{/}"
+                            th:href="@{/progress/__${currentUser.id}__}"
                             class="nav-link text-wheat"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
                             >Динамика болезни</a
@@ -67,10 +49,19 @@
                     <li>
                         <a
                             href="#"
-                            th:href="@{/}"
+                            th:href="@{/examination}"
                             class="nav-link text-wheat"
                             th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
                             >Отправка показателей</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#"
+                            th:href="@{/profile/doctor/__${currentUser.doctor.id}__}"
+                            class="nav-link text-wheat"
+                            th:classappend="${#strings.equals(page, 'index')} ? text-secondary"
+                            >Лечащий врач</a
                         >
                     </li>
                     <li>
