--- a/src/main/resources/templates/own-patients.html
+++ b/src/main/resources/templates/own-patients.html
@@ -64,25 +64,18 @@
         ></div>
         <div class="container mx-2">
             <div class="row text-white text-center bg-dark rounded p-5 mb-5">
-                <h1 th:text="${patient.role.alias}"></h1>
+                <h1 class="mb-5">Ваши пациенты</h1>
                 <div>
                     <ul>
-                        <li th:text="${patient.hospitalId}"></li>
-                        <li th:text="${patient.userInformation.lastname}"></li>
-                        <li th:text="${patient.userInformation.name}"></li>
-                        <li
-                            th:text="${patient.userInformation.patronymic}"
-                        ></li>
+                        <li th:each="each : ${patients}">
+                            <a
+                                href="#"
+                                th:href="@{/profile/patient/__${each.id}__}"
+                                th:text="${each.userInformation.name} + ' ' + ${each.userInformation.lastname} + ' oid: ' + ${each.hospitalId}"
+                            ></a>
+                        </li>
                     </ul>
                 </div>
-            </div>
-            <div>
-                <a
-                    href="#"
-                    th:href="@{/progress/__${currentUser.id}__}"
-                    class="btn btn-primary"
-                    >Посмотреть показатели этого пациента</a
-                >
             </div>
         </div>
         <div class="container-fluid bg-dark">
