--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -17,27 +17,35 @@
         />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center el">
+    <body
+        class="min-vh-100 d-flex flex-column justify-content-center error-page"
+    >
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 text-center mx-auto">
-                    <div class="p-3">
-                        <div class="border-bottom border-black">
+                    <div class="p-4">
+                        <div
+                            class="border-bottom border-black text-secondary word-wrap"
+                        >
                             <h1 th:text="${errorTitle}">Заголовок ошибки</h1>
                         </div>
-                        <div class="border-bottom border-black mt-3">
+                        <div
+                            class="border-bottom border-black text-secondary mt-3"
+                        >
                             <p th:text="${errorText}" class="fs-3">
-                                ТекстОшибкиТекстОшибкиТекстОшибки
-                                ТекстОшибкиТекстОшибкиТекстОшибки
-                                ТекстОшибкиТекстОшибкиТекстОшибки
-                                ТекстОшибкиТекстОшибкиТекстОшибки
-                                ТекстОшибкиТекстОшибкиТекстОшибки
-                                ТекстОшибкиТекстОшибкиТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
+                                ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                             </p>
                         </div>
                         <div class="mt-2">
                             <p class="fs-3">
-                                <a href="#" th:href="@{/}" class="text-black"
+                                <a
+                                    href="#"
+                                    th:href="@{/}"
+                                    class="text-secondary"
                                     >На главную</a
                                 >
                             </p>
