--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -18,21 +18,25 @@
     </head>
 
     <body
-        class="min-vh-100 d-flex flex-column justify-content-center error-page"
+        class="min-vh-100 d-flex flex-column justify-content-center bg-gray-100"
     >
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 text-center mx-auto">
                     <div class="p-4">
-                        <div
-                            class="border-bottom border-black text-secondary word-wrap"
-                        >
-                            <h1 th:text="${errorTitle}">Заголовок ошибки</h1>
+                        <div class="border-bottom border-black">
+                            <h1
+                                th:text="${errorTitle}"
+                                class="text-secondary mb-3"
+                            >
+                                Заголовок ошибки
+                            </h1>
                         </div>
-                        <div
-                            class="border-bottom border-black text-secondary mt-3"
-                        >
-                            <p th:text="${errorText}" class="fs-3">
+                        <div class="border-bottom border-black my-2">
+                            <p
+                                th:text="${errorText}"
+                                class="text-secondary word-wrap fs-3"
+                            >
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
@@ -40,7 +44,7 @@
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                             </p>
                         </div>
-                        <div class="mt-2">
+                        <div>
                             <p class="fs-3">
                                 <a
                                     href="#"
