Улучшил вёрстку страниц ошибки и генерации кода, удалил лишние стили. Убрал закомментированные куски кода из файла test.js.

--- a/src/main/resources/templates/code-generation.html
+++ b/src/main/resources/templates/code-generation.html
@@ -21,8 +21,8 @@
         class="min-vh-100 d-flex flex-column justify-content-center bg-gray-100"
     >
         <div class="container">
-            <div class="row">
-                <div class="col-12 text-center mb-5">
+            <div class="row mb-5">
+                <div class="col-12 text-center">
                     <form
                         action="#"
                         th:action="@{/rest/code-generation}"
@@ -30,14 +30,14 @@
                         class="border rounded p-5"
                     >
                         <label
-                            for="expirationDateEnum"
+                            for="expirationDate"
                             class="form-label text-secondary fs-4"
                             >Срок действия кода</label
                         >
                         <select
-                            id="expirationDateEnum"
+                            id="expirationDate"
                             class="form-select mb-5"
-                            name="expirationDateEnum"
+                            name="expirationDate"
                         >
                             <option
                                 th:each="each: ${expirationDateList}"
@@ -50,29 +50,33 @@
                         </button>
                     </form>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-12 text-secondary">
                     <div>
-                        <h1 class="text-center">Инструкция</h1>
+                        <h1 class="text-center">Описание</h1>
                     </div>
                     <hr />
                     <div class="text-start fs-5">
                         <p>
-                            При нажатии на кнопку "Сгенерировать" сервер создаст
-                            уникальный код, который будет вам отображён. Этот
-                            код является паролем для доступа к странице
+                            При нажатии на кнопку "Сгенерировать" сервер создаёт
+                            уникальный код: пароль для доступа к странице
                             регистрации медицинского учреждения.
                         </p>
                         <p>
-                            Не пересылайте этот код никому кроме того
-                            представителя медицинского учреждения, для которого
-                            он предназначен.
+                            Не отправляйте сгенерированный код посторонним
+                            людям. Он предназначен только для официальных
+                            представителей медицинских учреждений, подтвердивших
+                            свою личность и намерение использовать приложение.
                         </p>
                         <p>
-                            После успешной регистрации медицинского учреждения
-                            код удаляется из базы данных. Если срок действия
+                            В единственном поле "Срок действия кода" выбирается
+                            число дней, которое код будет храниться в базе
+                            данных. После успешной регистрации медицинского
+                            учреждения код удаляется из базы. Если срок действия
                             кода истёк, а медицинское учреждение по каким-то
-                            причинам не было зарегистрировано, процедуру нужно
-                            будет повторить.
+                            причинам не было зарегистрировано, генерацию и
+                            выдачу кода нужно будет провести заново.
                         </p>
                     </div>
                 </div>
