--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -23,21 +23,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 text-center mx-auto">
-                    <div class="p-4">
+                    <div class="text-secondary p-4">
                         <div>
-                            <h1
-                                th:text="${errorTitle}"
-                                class="text-secondary mb-3"
-                            >
-                                Заголовок ошибки
-                            </h1>
+                            <h1 th:text="${errorTitle}">Заголовок ошибки</h1>
                         </div>
                         <hr />
                         <div class="my-2">
-                            <p
-                                th:text="${errorText}"
-                                class="text-secondary word-wrap fs-3"
-                            >
+                            <p th:text="${errorText}" class="word-wrap fs-3">
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
                                 ТекстОшибки ТекстОшибки ТекстОшибки ТекстОшибки
