--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,8 @@
 .bg-gray-100 {
     background-color: var(--bs-gray-100);
 }
+
+.break-all {
+    word-wrap: break-word;
+    word-break: break-all;
+}
