--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -98,5 +98,123 @@
             </div>
         </div>
         <script src="../static/js/test2.js" th:src="@{/js/test2.js}"></script>
+        <script
+            src="../static/js/bootstrap.bundle.min.js"
+            th:src="@{/js/bootstrap.bundle.min.js}"
+        ></script>
+        <!--<button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            data-bs-whatever="@mdo"
+        >
+            Open modal for @mdo
+        </button>
+        <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            data-bs-whatever="@fat"
+        >
+            Open modal for @fat
+        </button>
+        <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            data-bs-whatever="@getbootstrap"
+        >
+            Open modal for @getbootstrap
+        </button>
+
+        <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">
+                            New message
+                        </h1>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label
+                                    for="recipient-name"
+                                    class="col-form-label"
+                                    >Recipient:</label
+                                >
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="recipient-name"
+                                />
+                            </div>
+                            <div class="mb-3">
+                                <label for="message-text" class="col-form-label"
+                                    >Message:</label
+                                >
+                                <textarea
+                                    class="form-control"
+                                    id="message-text"
+                                ></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                        >
+                            Close
+                        </button>
+                        <button type="button" class="btn btn-primary">
+                            Send message
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>-->
+        <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModalCenter"
+        >
+            Vertically centered modal
+        </button>
+        <!-- Vertically centered modal -->
+        <div
+            class="modal fade"
+            id="exampleModalCenter"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog modal-dialog-centered mx-auto">
+                <div class="bg-dark rounded p-5 mx-auto text-white">
+                    <p>123213213</p>
+                    <hr />
+                    <p>fasdfsadfdsafsadfsadfdsaf</p>
+                    <hr />
+                    <p>123213213</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
